terminando css y responsive

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                 <!-- textoencriptado -->
                 <textarea id="textoSalida"></textarea>
                 <!-- textos -->
-                <h3>Ningun mensaje fue encontrado</h3>
-                <p>Ingresa el texto que desees encriptar o desencriptar</p>
+                <div class="textos">
+                    <h3>Ningun mensaje fue encontrado</h3>
+                    <p>Ingresa el texto que desees encriptar o desencriptar</p>
+                </div>
                 <!-- botoncopiar -->
                 <button id="btn-copiar" class="botones">copiar</button>
             </section>
@@ -62,11 +64,13 @@
         <!-- footer -->
         <footer>
             <!-- redessociales -->
-            <h1>copyrigth</h1>
+            <h1>&#169;copyrigth</h1>
             <h2>Redes Sociales</h2>
+            <a href="https://github.com/JGD09"><i class="fa-brands fa-github"></i></a>
             <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="https://www.linkedin.com/in/jes%C3%BAs-de-hoyos-dwf/"><i class="fa-brands fa-linkedin"></i></a>
         </footer>
+
+        <script src="./assets/js/scripts.js"></script>
     </body>
 </html>
