ingresando logo correcto y modificando font-size del desencriptador

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- header -->
         <header>
             <!-- imgMilogo -->
-            <img  src="./assets/img/Vector.jpg" alt="Logo Alura">
+            <img  src="./assets/img/Logo.png" alt="Logo Alura">
         </header>
         <!-- cuerpo -->
         <main>
